--- a/package.json
+++ b/package.json
@@ -9,5 +9,17 @@
   "devDependencies": {
     "lerna": "^3.21.0"
   },
-  "workspaces": ["packages/*"]
+  "workspaces": {
+    "packages": [
+      "packages/*"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lerna exec npx lint-staged"
+    }
+  },
+  "dependencies": {
+    "husky": "^4.2.5"
+  }
 }
