--- a/packages/iac/package.json
+++ b/packages/iac/package.json
@@ -16,7 +16,8 @@
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.41.0",
-    "@aws-cdk/aws-ec2": "^1.42.0",
+    "@aws-cdk/aws-ec2": "1.41.0",
+    "@aws-cdk/aws-eks": "1.41.0",
     "@types/jest": "^25.2.1",
     "@types/node": "10.17.5",
     "aws-cdk": "1.41.0",
