--- a/packages/tls_termination_proxy/package.json
+++ b/packages/tls_termination_proxy/package.json
@@ -12,6 +12,7 @@
   },
   "scripts": {
     "start": "ts-node src/app.ts",
+    "build": "tsc",
     "lint": "prettier --list-different './{src,test}/**/*.{js,ts,json}'",
     "lint:fix": "prettier --write './{src,test}/**/*.{js,ts,json}'"
   },
@@ -22,6 +23,7 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@types/node": "^14.0.6",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.3"
   }
