--- a/packages/iac/package.json
+++ b/packages/iac/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@aws-cdk/assert": "1.41.0",
     "@aws-cdk/aws-ec2": "1.41.0",
+    "@aws-cdk/aws-ecr": "1.41.0",
     "@aws-cdk/aws-eks": "1.41.0",
     "@types/jest": "^25.2.1",
     "@types/js-yaml": "^3.12.4",
