--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "workspaces": {
     "packages": [
       "packages/*"
+    ],
+    "nohoist": [
+      "**/express",
+      "**/express/**"
     ]
   },
   "husky": {
