update app server project directory

--- a/packages/app_server/k8s/values.yaml
+++ b/packages/app_server/k8s/values.yaml
@@ -1,5 +1,5 @@
 image:
-  repository: 969371781552.dkr.ecr.ap-northeast-1.amazonaws.com/client_certificate_proxy
+  repository: 969371781552.dkr.ecr.ap-northeast-1.amazonaws.com/app_server
   tag: latest
 
 alb:
