--- a/packages/proxy/nginx.conf
+++ b/packages/proxy/nginx.conf
@@ -67,26 +67,24 @@ http {
     server_name localhost;
 
     # HSTS
-    # add_header Strict-Transport-Security "max-age=31536000; includeSubdomains";
+    add_header Strict-Transport-Security "max-age=31536000; includeSubdomains";
 
-    # ssl_client_certificate /etc/nginx/ssl/rootCA.pem;
+    ssl_client_certificate /etc/nginx/ssl/ca.crt;
 
-    #
     # ssl_trusted_certificate /etc/nginx/ssl/rootCA.pem;
-    # ssl_verify_depth 2;
+    # ssl_verify_depth 1;
     # ssl_crl client-certificates/ca.crl;
 
-    # ssl_verify_client on;
+    ssl_verify_client on;
 
     location / {
-      # proxy_set_header X-Real-IP $remote_addr;
-      # proxy_set_header X-Forwarded-For $remote_addr;
-      # proxy_set_header X-Forwarded-Host $host;
-      # proxy_set_header X-Forwarded-Server $host;
-      # proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $remote_addr;
+      proxy_set_header X-Forwarded-Host $host;
+      proxy_set_header X-Forwarded-Server $host;
+      proxy_set_header Host $host;
 
-      # proxy_pass http://app:3000;
-      root /usr/share/nginx/html;
+      proxy_pass http://app:3000;
     }
   }
 }
