--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -13,6 +13,7 @@
     ]
   },
   "scripts": {
+    "start": "ts-node src/index.ts",
     "build": "tsc",
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
