--- a/packages/proxy/nginx.conf
+++ b/packages/proxy/nginx.conf
@@ -77,14 +77,18 @@ http {
 
     ssl_verify_client on;
 
-    location / {
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $remote_addr;
-      proxy_set_header X-Forwarded-Host $host;
-      proxy_set_header X-Forwarded-Server $host;
-      proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $remote_addr;
+    proxy_set_header X-Forwarded-Host $host;
+    proxy_set_header X-Forwarded-Server $host;
+    proxy_set_header Host $host;
 
-      proxy_pass http://app:3000;
+    location / {
+      root /var/www/html;
+    }
+
+    location /api/ {
+      proxy_pass http://api:3000;
     }
   }
 }
