--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     }
   },
   "dependencies": {
-    "husky": "^4.2.5"
+    "husky": "^4.2.5",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   }
 }
