--- a/packages/proxy/nginx.conf
+++ b/packages/proxy/nginx.conf
@@ -84,11 +84,11 @@ http {
     proxy_set_header Host $host;
 
     location / {
-      root /var/www/html;
+      proxy_pass http://app:3000;
     }
 
     location /api/ {
-      proxy_pass http://api:3000;
+      proxy_pass http://api:3001;
     }
   }
 }
