--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -11,6 +11,8 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "react-scripts": "3.4.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "typescript": "~3.7.2"
   },
   "scripts": {
